--- a/ML/bot.ipynb
+++ b/ML/bot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inport ListTrainer\n",
     "\n",
     "bot = ChatBot(\n",
-    "    'Buddy',  \n",
+    "    'Thakudu',  \n",
     "    logic_adapters=[\n",
     "        'chatterbot.logic.BestMatch',\n",
     "        'chatterbot.logic.TimeLogicAdapter'],\n",
@@ -30,9 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List Trainer: [####################] 100%\n"
+     ]
+    }
+   ],
    "source": [
     "from chatterbot.trainers import ListTrainer\n",
     "\n",
@@ -52,11 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot Response: Could you elaborate your symptoms a bit more?\n"
+     ]
+    }
+   ],
    "source": [
-    "response = bot.get_response('im not feeling well')\n",
+    "response = bot.get_response('i have aids')\n",
     "\n",
     "print(\"Bot Response:\", response)"
    ]
